--- a/src/App.css
+++ b/src/App.css
@@ -17,10 +17,20 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 0 60px;
 }
 
-@media only screen and (min-width: 768px) {
+@media (max-width: 768px) {
+  body {
+    max-width: 100%;
+  }
   .main {
-    margin: 0 100px;
+    margin: 0 20px;
+    max-width: 100%;
+  }
+}
+
+@media (max-width: 425px) {
+  body {
   }
 }
