--- a/src/components/Collapse/Collapse.css
+++ b/src/components/Collapse/Collapse.css
@@ -1,6 +1,6 @@
 .collapses-container {
   width: 85%;
-  height: 100%;
+  /* height: 100%; */
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -36,4 +36,10 @@
   position: relative;
   bottom: 5px;
   z-index: -1;
+}
+
+@media (max-width: 768px) {
+  .collapses-container {
+    width: 97%;
+  }
 }
