--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -20,3 +20,9 @@
   color: #fff;
   font-size: 24px;
 }
+
+@media only screen and (max-width: 800px) {
+  .footer-text {
+    font-size: 18px;
+  }
+}
