--- a/src/components/Host/Host.css
+++ b/src/components/Host/Host.css
@@ -26,5 +26,14 @@
   text-align: end;
 }
 
-.rating-icon {
+@media only screen and (max-width: 768px) {
+  .housing-host {
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    margin-top: 10px;
+  }
+
+  .host-rating {
+    text-align: start;
+  }
 }
