--- a/src/components/Tags/Tags.css
+++ b/src/components/Tags/Tags.css
@@ -12,6 +12,12 @@
   font-weight: 500;
   border-radius: 10px;
   text-align: center;
-  padding: 3px 24px;
+  padding: 4px 24px;
   margin-top: 20px;
+}
+
+@media only screen and (max-width: 768px) {
+  .tag {
+    font-size: 12px;
+  }
 }
