--- a/src/components/Collapse/Collapse.css
+++ b/src/components/Collapse/Collapse.css
@@ -38,7 +38,7 @@
   z-index: -1;
 }
 
-@media (max-width: 768px) {
+@media screen and (max-width: 768px) {
   .collapses-container {
     width: 97%;
   }
