--- a/src/components/Tags/Tags.css
+++ b/src/components/Tags/Tags.css
@@ -16,7 +16,7 @@
   margin-top: 20px;
 }
 
-@media only screen and (max-width: 768px) {
+@media screen and (max-width: 768px) {
   .tag {
     font-size: 12px;
   }
