--- a/src/App.css
+++ b/src/App.css
@@ -6,31 +6,23 @@
 
 body {
   font-family: "Montserrat", sans-serif;
-  max-width: 1480px;
-  min-height: 100%;
+  max-width: 100%;
   font-size: 18px;
-  position: relative;
 }
 
 .main {
-  max-width: 95%;
+  /* max-width: 95%; */
   display: flex;
   flex-direction: column;
   align-items: center;
   margin: 0 60px;
 }
 
-@media (max-width: 768px) {
+@media screen and (max-width: 768px) {
   body {
-    max-width: 100%;
+    max-width: 768px;
   }
   .main {
     margin: 0 20px;
-    max-width: 100%;
-  }
-}
-
-@media (max-width: 425px) {
-  body {
   }
 }
