--- a/src/components/CardsList/CardsList.css
+++ b/src/components/CardsList/CardsList.css
@@ -2,17 +2,23 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 2rem;
   flex-wrap: wrap;
+  gap: 4.5rem;
   width: 97%;
-  min-height: 100%;
   padding: 50px;
   margin: 2rem;
   border-radius: 25px;
   background-color: #f6f6f6;
 }
 
-@media only screen and (max-width: 960px) {
+@media screen and (max-width: 1340px) {
+  .cards-container {
+    gap: 25px;
+    padding: 25px 15px;
+  }
+}
+
+@media screen and (max-width: 980px) {
   .cards-container {
     padding: 0;
     background-color: #fff;
