--- a/src/components/CardsList/components/Cards/Cards.css
+++ b/src/components/CardsList/components/Cards/Cards.css
@@ -1,6 +1,5 @@
 .card {
-  width: 340px;
-  height: 340px;
+  width: 28.9%;
   transition: all 0.2s ease-out;
 }
 
@@ -15,14 +14,14 @@
   display: block;
   position: relative;
   width: 100%;
-  height: 340px;
+  height: 400px;
   border-radius: 25px;
   cursor: pointer;
 }
 
 .img-container img {
   width: 100%;
-  height: 340px;
+  height: 400px;
   border-radius: 25px;
   object-fit: cover;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
@@ -48,7 +47,13 @@
   right: 15px;
 }
 
-@media only screen and (max-width: 960px) {
+@media screen and (max-width: 1340px) {
+  .card {
+    width: 47%;
+  }
+}
+
+@media screen and (max-width: 980px) {
   .card {
     width: 100%;
   }
