--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -21,7 +21,7 @@
   font-size: 24px;
 }
 
-@media only screen and (max-width: 800px) {
+@media screen and (max-width: 800px) {
   .footer-text {
     font-size: 18px;
   }
