--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,6 +1,6 @@
 .header {
   display: flex;
-  max-width: 1480px;
+  max-width: 100%;
   height: 68px;
   justify-content: space-between;
   align-items: center;
@@ -27,7 +27,7 @@ a:hover {
   border-bottom: 1px solid #ff6060;
 }
 
-@media (max-width: 768px) {
+@media screen and (max-width: 768px) {
   .header {
     max-width: 768px;
     margin: 10px 35px;
