--- a/src/components/Slideshow/Slideshow.css
+++ b/src/components/Slideshow/Slideshow.css
@@ -50,7 +50,7 @@
   color: #fff;
 }
 
-@media (max-width: 768px) {
+@media screen and (max-width: 768px) {
   .slideshow-counter {
     display: none;
   }
